updated folder structure and added comment and accessbility feature in html.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     </header>
     <!--Hero image updated with alt attribute -->
     <figure title="Horiseon Employees gathering around for a meeting">
+      <!--added aria label to insure alt attribute accessbility for hero image-->
+      <span role="img" aria-label="Horiseon Employees gathering around for a meeting"> </span>
     </figure>
     <!--end hero hero image-->
     <!--main section starts here-->
